--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@
 
 /* Les styles de la carte HTML ne sont plus nécessaires avec le SVG */
 
+body {
+  background-color: #1e1e1e;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+}
+
+html {
+  background-color: #1e1e1e;
+  width: 100vw;
+  height: 100vh;
+}
+
 .aoc-stats-card {
   font-family: sans-serif;
   background-color: #1e1e1e;
